# drone

./: .project  CMakeLists.txt  package.xml
launch/: drone.launch  drone_avec_optim.launch  manette.launch
librairies/Nouvelle_trajectoire/: NelderMead.c  NelderMead.h  abs.c  abs.h  diag.c  diag.h  mean.c  mean.h  nchoosek.c  nchoosek.h  nouvelle_trajectoire.c  nouvelle_trajectoire.h  nouvelle_trajectoire_data.c  nouvelle_trajectoire_data.h  nouvelle_trajectoire_emxAPI.c  nouvelle_trajectoire_emxAPI.h  nouvelle_trajectoire_emxutil.c  nouvelle_trajectoire_emxutil.h  nouvelle_trajectoire_initialize.c  nouvelle_trajectoire_initialize.h  nouvelle_trajectoire_rtwutil.c  nouvelle_trajectoire_rtwutil.h  nouvelle_trajectoire_terminate.c  nouvelle_trajectoire_terminate.h  nouvelle_trajectoire_types.h  pbern.c  pbern.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  sort1.c  sort1.h  sum.c  sum.h
msg/: Altitude_msg.msg  Capteurs_msg.msg  Clavier_msg.msg  Consigne_msg.msg  Data_msg.msg  Erreur_angle_msg.msg  Gaz_msg.msg  Optim_msg.msg
src/: Clavier_msg.msg  commande.txt  donnees.txt  etat_systeme.txt  position.txt  psi_t_ref.txt
src/Altitude/: Altitude.cpp  Altitude.hpp  BMP280.c  bme280.c  bme280.cpp  bme280.h  bme280.hpp  libSonar.cpp  libSonar.h  libSonar_exemple.cpp  ultrason_python.py  ultrason_test.c
src/Capteurs/: Calibration.cpp  Calibration_complete.cpp  Capteurs - Copie.cpp  Capteurs.cpp  Capteurs.hpp  Capteurs_old.cpp  MPU6050.cpp  MPU9250.cpp  MPU9250.h  MPU9250pio.cpp  MPU9250pio.h  MadgwickAHRS.c  MadgwickAHRS.cpp  MadgwickAHRS.h  MadgwickAHRS.hpp  a.out  compilation  test  ultrason_python.py  ultrason_test.c
src/Capteurs/conversion/: rotation.cpp  rotation.h
src/Capteurs/mathlib/: mathlib.h  mathlib_onera.h  mathlib_onera_v3.h  module.mk
src/Capteurs/mathlib/math_onera/: Matrix_onera.cpp  Matrix_onera.hpp  Quaternion_onera.hpp  Vector_onera.hpp
src/Capteurs/mathlib/math_onera_v3/: Matrix_onera_v3.cpp  Matrix_onera_v3.hpp  Matrixs_onera_v3.hpp  Quaternion_onera_v3.hpp  Vector_onera_v3.hpp
src/Clavier/: Clavier.cpp
src/Common/: Biquad.cpp  LowPassFilter2p.cpp  LowPassFilter2p.hpp  Realtime.cpp
src/Data/: AccelMag.txt  Altitude.txt  Angles.txt  Commande_moteur.txt  Data.txt  Manette.txt  Matlab.txt  PID.txt  PID_Vit.txt  PID_decompose_altitude.txt  PID_decompose_lacet.txt  PID_decompose_roulis.txt  PID_decompose_tangage.txt  PID_vit_decompose_altitude.txt  PID_vit_decompose_lacet.txt  PID_vit_decompose_roulis.txt  PID_vit_decompose_tangage.txt  traitement_donnees.asv  traitement_donnees.m
src/Ecriture/: Ecrit.cpp
src/Filtrage accelero/: Biquad.cpp  a.out  donnees_accelero.txt  optimisation_filtrage.cpp
src/Gps/: Gps.cpp  serial.cpp  serial.h
src/Init/: Init.cpp
src/Manette/: Manette.cpp
src/Optim/: Optimisation.cpp
src/Servos/: Servos.cpp  Servos.hpp
src/matlab/: Direct.m  TCP_raspberry.slx  Vitesse_angles.txt  direct_exemple1.m  entree.mat  erreur.mat  psobj.m  sortie.mat  traitement_donnees.asv  traitement_donnees.m  untitled.slx.autosave
(+55 files in other folders)
